# Hate

./: .gitignore  Glisha.hs  Hate.cabal  LEGAL.md  LICENSE  README.md  circle.yml  glisha.cabal  index.html  params.json  stack.yaml
2d/: Glisha2D.hs  game.hs  glisha2d.hs  sample.hs  sample2.hs  sample3.hs  shader.frag  shader.vert
3d/: game.hs  shader.frag  shader.vert  util.hs
common/: GlishaCommon.hs  Util.hs
samples/: Vec2Lens.hs  arkanoid.hs  sample.hs  sample2.hs  sample3.hs  sample_asteroids.hs  sample_scheduler.hs  sample_shapes.hs  sample_sprite.hs  sample_spritesheet.hs
samples/shaders/: shader.vert
src/: Glisha.hs  Hate.hs
src/Glisha/: Api.hs  Common.hs  G2D.hs  G3D.hs  Graphics.hs  Math.hs  Pipeline.hs  Util.hs
src/Glisha/Common/: Instances.hs  Types.hs
src/Glisha/Graphics/: Instances.hs  Pipeline.hs  Types.hs
src/Glisha/Graphics/Drawable/: Class.hs
src/Glisha/Math/: Instances.hs  Types.hs
src/Glisha/Math/Transformable/: Class.hs
src/Hate/: Common.hs  Events.hs  Graphics.hs  Math.hs  Util.hs
src/Hate/Common/: Events.hs  Instances.hs  Scheduler.hs  Types.hs
src/Hate/Events/: Types.hs
src/Hate/Graphics/: Backend.hs  BackendCompat.hs  BackendModern.hs  Instances.hs  Internal.hs  Pipeline.hs  Rendering.hs  Shader.hs  Shapes.hs  Sprite.hs  Types.hs  Util.hs
src/Hate/Graphics/Api/: Shapes.hs  Sprite.hs
src/Hate/Graphics/Backend/: Compat.hs  Modern.hs  Util.hs
src/Hate/Graphics/Backend/Common/: Pipeline.hs  Util.hs
src/Hate/Graphics/Backend/Common/Pipeline/: Util.hs
src/Hate/Graphics/Backend/Compat/: Shaders.hs  Types.hs
src/Hate/Graphics/Backend/Modern/: Shaders.hs  Types.hs
src/Hate/Graphics/BackendModern/: Types.hs
src/Hate/Graphics/Drawable/: Class.hs
src/Hate/Graphics/Pipeline/: Util.hs
src/Hate/Math/: Instances.hs  OpenGL.hs  Projection.hs  Types.hs  Util.hs
src/Hate/Math/Transformable/: Class.hs
stylesheets/: stylesheet.css
