name:                Hate
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            Simple abstraction over OpenGL.
description:         Simple abstraction over OpenGL. 
stability:           experimental
homepage:            http://github.com/bananu7/Hate
license:             MIT
license-file:        LICENSE
author:              Bartek Banachewicz
maintainer:          bananu7@o2.pl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.18

library
  -- Modules exported by the library.
  exposed-modules:    Hate,
                      Hate.Graphics,
                      Hate.Graphics.Rendering,
                      Hate.Graphics.Shapes
                      Hate.Graphics.Shader
                      Hate.Math
  other-modules:      Hate.Common
                      Hate.Common.Types
                      Hate.Common.Instances
                      Hate.Math.Instances
                      Hate.Math.Transformable.Class
                      Hate.Math.Types
                      Hate.Math.Util
                      Hate.Graphics.Pipeline
                      Hate.Graphics.Pipeline.Util
                      Hate.Graphics.Types
                      Hate.Graphics.Util
                      Hate.Graphics.Sprite
                      Hate.Graphics.Internal
                       

  hs-source-dirs:      .,src
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.6 && < 4.8,
                       GLFW-b >= 1.4,
                       GLUtil >= 0.7,
                       OpenGL > 2.9.1,
                       transformers, mtl, vect, vect-opengl, vector, JuicyPixels, bytestring

  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans

executable sample_shapes
  main-is:          sample_shapes.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.8,
                    GLFW-b >= 1.4,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels,
                    Hate
  default-language: Haskell2010

executable sample_sprite
  main-is:          sample_sprite.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.8,
                    GLFW-b >= 1.4,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels,
                    Hate,
                    random, lens
  default-language: Haskell2010

