name:                Hate
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change

version:             0.1.4.2
synopsis:            A small 2D game framework.
description:         A small 2D game framework. 
stability:           experimental
homepage:            http://github.com/bananu7/Hate
license:             MIT
license-file:        LICENSE
author:              Bartek Banachewicz
maintainer:          bananu7@o2.pl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.18

library
  -- Modules exported by the library.
  exposed-modules:    Hate
                      Hate.Graphics
                      Hate.Graphics.Shapes
                      Hate.Math
                      Hate.Math.Types
                      Hate.Common.Scheduler
                      Hate.Events
                      Hate.Events.Types
                      
  other-modules:      Hate.Common
                      Hate.Common.Types
                      Hate.Common.Instances
                      Hate.Math.Transformable.Class
                      Hate.Math.Util
                      Hate.Graphics.Pipeline
                      Hate.Graphics.Pipeline.Util
                      Hate.Graphics.Shader
                      Hate.Graphics.Types
                      Hate.Graphics.Rendering
                      Hate.Graphics.Sprite
                      Hate.Graphics.Backend
                      Hate.Graphics.Backend.Util
                      Hate.Graphics.Backend.Compat
                      Hate.Graphics.Backend.Compat.Shaders
                      Hate.Graphics.Backend.Compat.Types
                      Hate.Graphics.Backend.Modern
                      Hate.Graphics.Backend.Modern.Shaders
                      Hate.Graphics.Backend.Modern.Types
                       

  hs-source-dirs:      .,src
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.6 && < 4.9,
                       GLFW-b >= 1.4 && < 1.4.7,
                       GLUtil >= 0.7,
                       OpenGL > 2.9.1,
                       transformers,
                       mtl,
                       vect,
                       vect-opengl,
                       vector,
                       JuicyPixels,
                       JuicyPixels-util,
                       bytestring,
                       multimap,
                       stm > 2.4

  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans

executable sample_shapes
  main-is:          sample_shapes.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.9,
                    GLFW-b >= 1.4 && < 1.4.7,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels, JuicyPixels-util,
                    Hate
  default-language: Haskell2010

executable sample_scheduler
  main-is:          sample_scheduler.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.9,
                    GLFW-b >= 1.4 && < 1.4.7,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels, JuicyPixels-util,
                    Hate,
                    lens
  default-language: Haskell2010

executable sample_sprite
  main-is:          sample_sprite.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.9,
                    GLFW-b >= 1.4 && < 1.4.7,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels, JuicyPixels-util,
                    Hate,
                    random, lens
  default-language: Haskell2010

executable sample_spritesheet
  main-is:          sample_spritesheet.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.9,
                    GLFW-b >= 1.4 && < 1.4.7,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels, JuicyPixels-util,
                    Hate,
                    random, lens
  default-language: Haskell2010

executable sample_asteroids
  main-is:          sample_asteroids.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.9,
                    GLFW-b >= 1.4 && < 1.4.7,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels, JuicyPixels-util,
                    Hate,
                    random, lens
  default-language: Haskell2010


