name:                Hate
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change

version:             0.1.4.4
synopsis:            A small 2D game framework.
description:         A small 2D game framework. 
stability:           experimental
homepage:            http://github.com/bananu7/Hate
license:             MIT
license-file:        LICENSE
author:              Bartek Banachewicz
maintainer:          bananu7@o2.pl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.18

library
  -- Modules exported by the library.
  exposed-modules:    Hate
                      Hate.Graphics
                      Hate.Graphics.Api.Shapes
                      Hate.Graphics.Api.Sprite
                      Hate.Math
                      Hate.Math.Types
                      Hate.Common.Scheduler
                      Hate.Events
                      Hate.Events.Types
                      
  other-modules:      Hate.Common
                      Hate.Common.Types
                      Hate.Common.Instances
                      Hate.Math.OpenGL
                      Hate.Math.Projection
                      Hate.Math.Transformable.Class
                      Hate.Math.Util
                      Hate.Graphics.Shader
                      Hate.Graphics.Types
                      Hate.Graphics.Rendering
                      Hate.Graphics.Backend
                      Hate.Graphics.Backend.Common.Pipeline
                      Hate.Graphics.Backend.Common.Pipeline.Util
                      Hate.Graphics.Backend.Common.Util
                      Hate.Graphics.Backend.Compat
                      Hate.Graphics.Backend.Compat.Shaders
                      Hate.Graphics.Backend.Compat.Types
                      Hate.Graphics.Backend.Modern
                      Hate.Graphics.Backend.Modern.Shaders
                      Hate.Graphics.Backend.Modern.Types
                      Hate.Util
                       

  hs-source-dirs:      .,src
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- this is in dependencies because it has to be installed
  -- before GLUtil installation is attempted.
  if impl(ghc < 7.10.1)
    build-tools:       cpphs

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.6 && < 5,
                       GLFW-b >= 1.4.7,
                       OpenGL >= 3,
                       OpenGLRaw >= 3,
                       transformers,
                       mtl,
                       vect,
                       vector,
                       array,
                       JuicyPixels,
                       JuicyPixels-util,
                       bytestring,
                       multimap,
                       stm > 2.4

  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans

executable sample_shapes
  main-is:          sample_shapes.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 5,
                    transformers, mtl, vect,
                    Hate
  default-language: Haskell2010

executable sample_scheduler
  main-is:          sample_scheduler.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 5,
                    transformers, mtl, vect,
                    Hate,
                    lens
  default-language: Haskell2010

executable sample_sprite
  main-is:          sample_sprite.hs
  hs-source-dirs:   samples 
  other-modules:    Vec2Lens
  build-depends:    base >= 4.6 && < 5,
                    transformers, mtl, vect,
                    Hate,
                    random, lens
  default-language: Haskell2010

executable sample_spritesheet
  main-is:          sample_spritesheet.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 5,
                    transformers, mtl, vect,
                    Hate,
                    random, lens
  default-language: Haskell2010

executable sample_asteroids
  main-is:          sample_asteroids.hs
  hs-source-dirs:   samples
  other-modules:    Vec2Lens
  build-depends:    base >= 4.6 && < 5,
                    transformers, mtl, vect,
                    Hate,
                    random, lens
  default-language: Haskell2010


