name:                glisha
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            Simple abstraction over OpenGL.
description:         Simple abstraction over OpenGL. 
stability:           experimental
homepage:            http://github.com/bananu7/glisha
license:             MIT
license-file:        LICENSE
author:              Bartek Banachewicz
maintainer:          bananu7@o2.pl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.18

library
  -- Modules exported by the library.
  exposed-modules:    Glisha,
                      Glisha.Graphics,
                      Glisha.Graphics.Instances,
                      Glisha.Graphics.Shapes
                      Glisha.Math
  other-modules:      Glisha.Common
                      Glisha.Common.Types
                      Glisha.Graphics.Pipeline
                      Glisha.Graphics.Types
                      Glisha.Graphics.Util
                       

  hs-source-dirs:      .,src
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.6 && < 4.8,
                       GLFW-b >= 1.4,
                       GLUtil >= 0.7,
                       OpenGL > 2.9.1,
                       transformers, mtl, vect, vect-opengl, vector, JuicyPixels, bytestring

  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans

executable sample1
  main-is:          sample.hs
  hs-source-dirs:   samples

  build-depends:    base >= 4.6 && < 4.8,
                    GLFW-b >= 1.4,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels,
                    glisha

  default-language: Haskell2010

executable sample2
  main-is:          sample3.hs
  hs-source-dirs:   samples 
  build-depends:    base >= 4.6 && < 4.8,
                    GLFW-b >= 1.4,
                    GLUtil >= 0.7,
                    OpenGL > 2.9.1,
                    transformers, mtl, vect, vect-opengl, vector, JuicyPixels,
                    glisha
  default-language: Haskell2010

